--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,4 @@
-<mat-spinner></mat-spinner>
+<app-header></app-header>
+<!-- <app-homedivision></app-homedivision> -->
 
-<app-regiones></app-regiones>
-
-<app-provincias></app-provincias>
-
-<app-comunas></app-comunas>
-
-<!-- <app-apimercado-publico></app-apimercado-publico> -->
+<app-apimercado-publico></app-apimercado-publico>
