--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-header></app-header>
 <!-- <app-homedivision></app-homedivision> -->
 
-<app-apimercado-publico></app-apimercado-publico>
+<app-mercado-publico></app-mercado-publico>
